[gd_scene load_steps=2 format=3 uid="uid://cm08e0qs4xw4x"]

[ext_resource type="Script" path="res://scripts/menues/startMenu.gd" id="1_hwpd4"]

[node name="startMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwpd4")

[node name="pnlMain" type="Panel" parent="."]
layout_mode = 0
offset_right = 1915.0
offset_bottom = 1075.0

[node name="btnLogin" type="Button" parent="pnlMain"]
offset_left = 853.0
offset_top = 196.0
offset_right = 1053.0
offset_bottom = 266.0
text = "Login"

[node name="btnStartNew" type="Button" parent="pnlMain"]
layout_mode = 0
offset_left = 851.0
offset_top = 329.0
offset_right = 1051.0
offset_bottom = 399.0
text = "Create from Scratch"

[node name="btnStartTemplate" type="Button" parent="pnlMain"]
layout_mode = 0
offset_left = 853.0
offset_top = 484.0
offset_right = 1053.0
offset_bottom = 554.0
text = "Create from Template"

[node name="btnGalery" type="Button" parent="pnlMain"]
layout_mode = 0
offset_left = 854.0
offset_top = 563.0
offset_right = 1054.0
offset_bottom = 633.0
text = "Galery
"

[node name="btnCreations" type="Button" parent="pnlMain"]
layout_mode = 0
offset_left = 851.0
offset_top = 406.0
offset_right = 1051.0
offset_bottom = 476.0
text = "Your Creations
"
